[package]
name = "heart_sensor"
version = "0.1.0"
edition = "2021"
resolver="2"
features= ["asm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt  =  { version = "0.6.13", features=["device"]}
stm32f3xx-hal = { version = "0.8.1", features = ["ld", "rt", "stm32f303xc"] }
stm32f3-discovery = "0.7.2"
rtt-target = {version = "0.3.1", features=["cortex-m"]}
panic-rtt-target = {version = "0.1.2", features=["cortex-m"]}
